# Master-Android

./: README.md
app/: CMakeLists.txt  build.gradle  google-services.json  proguard-rules.pro
app/src/: Android.mk
app/src/androidTest/java/com/erkkiperkele/master_android/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ParallelCalculations.cpp  ParallelCalculations.h  native-lib.cpp  parallel-pi.cpp  parallel_pi_service.cpp  simple-pi.cpp  simple_pi_service.cpp
app/src/main/cpp-shared/: parallel_pi_calculations.cpp  parallel_pi_calculations.h  simple_pi_calculations.cpp  simple_pi_calculations.h
app/src/main/java/com/erkkiperkele/master_android/: DateTimeProvider.java  JResult.java  MultiPiActivity.java  SimpleParallel.java  SimplePiActivity.java
app/src/main/java/com/erkkiperkele/master_android/activity/: MultiPiActivity.java  SimplePiActivity.java
app/src/main/java/com/erkkiperkele/master_android/entity/: JResult.java
app/src/main/java/com/erkkiperkele/master_android/service/: FirebaseService.java  MultiPiDataService.java  SimplePiDataService.java  (+1 more)
app/src/main/res/drawable/: side_nav_bar.xml
app/src/main/res/layout/: activity_multi_pi.xml  activity_simple_parallel.xml  activity_simple_pi.xml  app_bar_multi_pi.xml  app_bar_simple_pi.xml  content_multi_pi.xml  content_simple_pi.xml  nav_header.xml  pi_result_item.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml
app/src/test/java/com/erkkiperkele/master_android/: ExampleUnitTest.java
(+3 files in other folders)
